--- a/.github/workflows/deploy-test.yml
+++ b/.github/workflows/deploy-test.yml
@@ -25,6 +25,9 @@ jobs:
       working-directory: .
 
     - name: Publish package
+      env:
+        TWINE_USERNAME: ${{ secrets.TEST_TWINE_USERNAME }}
+        TWINE_PASSWORD: ${{ secrets.TEST_TWINE_PASSWORD }}
       run: twine upload --repository testpypi dist/* --non-interactive
       working-directory: .
 
